--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
     "version": "1.0.0",
     "description": "A sample Apache Cordova application that responds to the deviceready event.",
     "main": "index.js",
+    "watch": {
+        "buildbrowser": {
+            "patterns": [
+                "src"
+            ],
+            "extensions": "ts,html"
+        }
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "rm -rf www && cp -avr src/www ./www && tsc -p .",
-        "browser": "npm build && cordova run browser"
+        "buildbrowser": "rm -rf www && cp -avr src/www ./www && tsc -p . && cordova prepare browser",
+        "rebuild": "cordova prepare browser",
+        "browser": "npm build && cordova run browser",
+        "watch": "npm-watch"
     },
     "keywords": [
         "ecosystem:cordova"
@@ -15,13 +26,22 @@
     "author": "Apache Cordova Team",
     "license": "Apache-2.0",
     "dependencies": {
-        "cordova-android": "^8.0.0",
-        "cordova-browser": "^6.0.0",
-        "cordova-plugin-browsersync": "^1.1.0",
-        "onsenui": "^2.10.8"
+        "browser-sync": "^2.26.5",
+        "cheerio": "^0.19.0",
+        "cordova-android": "8.0.0",
+        "cordova-browser": "6.0.0",
+        "csp-parse": "0.0.2",
+        "elementtree": "^0.1.7",
+        "glob": "^5.0.15",
+        "npm": "^2.15.12",
+        "onsenui": "^2.10.8",
+        "plist": "^1.2.0",
+        "q": "^1.5.1"
     },
     "devDependencies": {
         "cordova-plugin-whitelist": "^1.3.3",
+        "npm": "^2.15.12",
+        "npm-watch": "^0.6.0",
         "typescript": "^3.4.5"
     },
     "cordova": {
@@ -29,8 +49,8 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "android",
-            "browser"
+            "browser",
+            "android"
         ]
     }
 }
