Adicao biblioteca moment.js

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "csp-parse": "0.0.2",
         "elementtree": "^0.1.7",
         "glob": "^5.0.15",
+        "moment": "^2.24.0",
         "npm": "^2.15.12",
         "onsenui": "^2.10.8",
         "plist": "^1.2.0",
