--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         }
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "npm run build && karma start --single-run",
         "build": "rm -rf www && cp -avr src/www ./www && tsc -p .",
         "buildbrowser": "rm -rf www && cp -avr src/www ./www && tsc -p . && cordova prepare browser",
         "rebuild": "cordova prepare browser",
@@ -41,6 +41,11 @@
     },
     "devDependencies": {
         "cordova-plugin-whitelist": "^1.3.3",
+        "jasmine": "^3.4.0",
+        "karma": "^4.1.0",
+        "karma-firefox-launcher": "^1.1.0",
+        "karma-jasmine": "^2.0.1",
+        "karma-spec-reporter": "0.0.32",
         "npm": "^2.15.12",
         "npm-watch": "^0.6.0",
         "typescript": "^3.4.5"
